[package]
name = "papelito"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Maia"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cfg-if = "1.0.0"
js-sys = "0.3.61"
lazy_static = "1.4.0"
leptos = { git = "https://github.com/leptos-rs/leptos", branch = "main", default-features = false}
leptos_dom = { git = "https://github.com/leptos-rs/leptos", branch = "main", default-features = false}
leptos_meta = { git = "https://github.com/leptos-rs/leptos", branch = "main", default-features = false}
wasm-bindgen = "0.2.84"
web-sys = {version = "0.3.61", features = ["HtmlDocument", "DomRect", "CssStyleDeclaration"]}
